infra/main.tf
provider "aws" {
  region = "ap-south-1"
}

resource "aws_instance" "backend_ec2" {
  ami           = "ami-02b8269d5e85954ef" # Ubuntu 22.04 LTS Free Tier (Mumbai)
  instance_type = "t2.micro"
  key_name      = var.key_name
  vpc_security_group_ids = [aws_security_group.backend_sg.id]
  tags = {
    Name = "backend-ec2-instance"
  }
}

resource "aws_security_group" "backend_sg" {
  name        = "backend_sg"
  description = "Allow SSH and HTTP"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow Node.js backend access"
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

variable "key_name" {
  description = "EC2 Key Pair name"
  type        = string
}
